--- a/OMSI webpage/index.html
+++ b/OMSI webpage/index.html
@@ -11,11 +11,41 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <nav class="navbar navbar-fixed-top navbar-light bg-faded">
+      <svg width="126" height="39" viewBox="0 0 321 100"><title>OMSI Logo</title><desc>OMSI Logo</desc><g fill="none" fill-rule="evenodd"><path d="M 287.41 2.797 L 287.41 28.23 C 284.36 10.172 268.59 0 243.92 0 C 220.52 0 204.24 11.952 202.21 27.973 L 202.21 2.797 L 161.26 2.797 L 149.3 49.588 L 136.08 2.797 L 96.14 2.797 L 96.14 35.857 C 90.29 15 71.47 0 49.09 0 C 21.874 0 0 22.12 0 49.588 C 0 77.05 21.874 99.18 49.09 99.18 C 71.47 99.18 90.29 84.17 96.14 63.32 L 96.14 96.38 L 126.66 96.38 L 126.66 50.86 L 137.35 95.11 L 161.26 95.11 L 171.94 50.86 L 171.94 96.63 L 202.46 96.63 L 202.46 71.71 C 206.78 87.988 223.32 99.18 244.17 99.18 C 269.1 99.18 285.63 89.51 287.16 71.2 L 287.16 96.63 L 320.22 96.63 L 320.22 2.797 L 287.41 2.797 M 49.09 64.34 C 40.95 64.34 34.591 57.726 34.591 49.588 C 34.591 41.45 41.2 34.839 49.09 34.839 C 57.23 34.839 63.59 41.45 63.59 49.588 C 63.59 57.726 57.23 64.34 49.09 64.34 M 244.17 71.2 C 238.83 71.2 235.02 69.17 235.02 62.56 L 202.21 62.56 L 202.21 34.839 C 203.99 49.33 218.23 55.18 233.74 57.726 C 240.1 58.743 251.55 60.01 251.55 65.35 C 251.55 68.41 249.77 71.2 244.17 71.2 M 254.85 38.653 C 248.24 37.636 237.56 36.619 237.56 30.26 C 237.56 26.956 240.87 25.18 244.17 25.18 C 249.51 25.18 251.55 28.23 251.55 34.585 L 287.41 34.585 L 287.41 63.829 C 285.63 48.32 273.17 41.705 254.85 38.653" fill="#EC1A3B"></path></g></svg>
+      <!-- <a class="navbar-brand" href="#">Fixed top</a> -->
+    </nav>
+
     <div class="container-fliud">
+      <div class="image">
+      </div>
       <div class="row">
-          <div class="image">
+          <div class="featured col-xs-12">
+            <img class="house pull-right" src="img/ginger.png" alt="" />
           </div>
       </div>
+      <div class="row">
+        <div class="rover col-xs-12 col-sm-6 col-md-12">
+          <img class="pull-right images" src="img/rover.png" alt="" />
+        </div>
+        <div class="popcorn col-xs-12 col-sm-6 col-md-12">
+          <img class="images" src="img/popcorn.png" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="telescope col-xs-12 col-sm-6 col-md-12">
+          <img class="pull-right images" src="img/scope.png" alt="" />
+        </div>
+        <div class="tent col-xs-12 col-sm-6 col-md-12">
+          <img class="images" src="img/tent.png" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="space col-xs-12">
+
+        </div>
+      </div>
+
     </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
